app04/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app04
  labels:
    istio-injection: enabled
