app04/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app04-v1
  namespace: app04
  labels:
    app: app04
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app04
      version: v1
  template:
    metadata:
      labels:
        app: app04
        version: v1
    spec:
      containers:
        - image: wizhubdocker8s/istio-demo:latest
          imagePullPolicy: Always
          name: app04
          ports:
            - name: http
              containerPort: 8080
