app04/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app04-svc
  namespace: app04
  labels:
    app: app04
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: app04
