app04/authorization-policy-allow-get-only.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-get-only
  namespace: app04
spec:
  selector:
    matchLabels:
      app: app04
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["client"]
      to:
        - operation:
            methods: ["GET"]
